--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>AI 雙軌共振系統 - 優化 v61</title>
+    <title>AI 三維滲透系統 - 優化 v62</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e74c3c; --success: #27ae60; --bg: #f4f7f6; }
         body { font-family: "Microsoft JhengHei", sans-serif; background: var(--bg); margin: 0; padding: 20px; }
@@ -22,21 +22,21 @@
 <body>
 
     <div class="panel">
-        <h3 class="panel-title">1. 數據解析 (v61 雙軌共振版)</h3>
+        <h3 class="panel-title">1. 數據解析 (v62 三維滲透版)</h3>
         <input type="file" id="csvFile" accept=".csv">
     </div>
 
     <div id="analysisSection" style="display:none;">
         <div class="panel">
-            <h3 class="panel-title">2. AI 預測 (下一期建議)</h3>
+            <h3 class="panel-title">2. AI 滲透預測 (下一期建議)</h3>
             <div id="predictionResults"></div>
         </div>
 
         <div class="panel">
-            <h3 class="panel-title">3. 滾動回測 (目標：重啟 v48 級別穩定度)</h3>
+            <h3 class="panel-title">3. 滾動回測 (目標：衝刺命中 3)</h3>
             <div class="table-container">
                 <table>
-                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v61)</th><th>命中</th></tr></thead>
+                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v62)</th><th>命中</th></tr></thead>
                     <tbody id="backtestBody"></tbody>
                 </table>
             </div>
@@ -62,15 +62,18 @@
             if (data.length > 0) processSystem(data);
         }
 
-        function getDualTrackPick(history) {
+        function getPenetrationPick(history) {
             let scores = Array(40).fill(0);
             let missArr = Array(40).fill(0);
             const lastNums = history[history.length - 1].nums;
             const recentHistory = history.slice(-5).flatMap(h => h.nums);
             
-            // 尾數熱度統計
             let tailFreq = Array(10).fill(0);
             recentHistory.forEach(n => tailFreq[n % 10]++);
+
+            // 1. 區間飽和度分析
+            let zonePop = [0,0,0,0];
+            history.slice(-3).forEach(h => h.nums.forEach(n => zonePop[Math.floor(n/10)]++));
 
             for (let i = 1; i <= 39; i++) {
                 let m = 0;
@@ -79,34 +82,39 @@
                 }
                 missArr[i] = m;
 
-                // 核心權重分配
-                if (m === 1) scores[i] += 550;       // 熱軌
-                else if (m >= 5 && m <= 9) scores[i] += 500; // 冷軌
-                else if (m === 0) scores[i] += 250;  // 連莊
+                // 2. 強化 L1/L5-9 權重 (v48 核心)
+                if (m === 1) scores[i] += 580;       
+                else if (m >= 5 && m <= 9) scores[i] += 520; 
+                else if (m === 0) scores[i] += 280;  
                 else if (m >= 13) scores[i] = 0;
-                else scores[i] += 100;
+                else scores[i] += 120;
 
-                // 尾數熱度與連動
+                // 3. 鄰號與尾數共振
+                if (lastNums.some(ln => Math.abs(ln - i) === 1)) scores[i] += 160;
                 scores[i] += tailFreq[i % 10] * 30;
-                if (lastNums.some(ln => Math.abs(ln - i) === 1)) scores[i] += 150;
+
+                // 4. 飽和度補償
+                if (zonePop[Math.floor(i/10)] <= 2) scores[i] += 100;
             }
 
             let sorted = Array.from({length: 39}, (_, i) => i + 1).sort((a, b) => scores[b] - scores[a]);
             let final = [];
 
-            // 1. 強制軌道選號
-            let trackHot = sorted.filter(n => missArr[n] === 1).slice(0, 2);
-            trackHot.forEach(n => final.push(n));
+            // 核心分層選取 (確保 2 熱 + 2 彈性)
+            let hotNodes = sorted.filter(n => missArr[n] <= 1).slice(0, 2);
+            hotNodes.forEach(n => final.push(n));
 
-            let trackCold = sorted.filter(n => !final.includes(n) && missArr[n] >= 5 && missArr[n] <= 9).slice(0, 2);
-            trackCold.forEach(n => final.push(n));
+            let elasticNodes = sorted.filter(n => !final.includes(n) && missArr[n] >= 5 && missArr[n] <= 9).slice(0, 2);
+            elasticNodes.forEach(n => final.push(n));
 
-            // 2. 補足第 5 顆 (找最強共振)
-            for (let n of sorted) {
-                if (final.length >= 5) break;
-                if (final.includes(n)) continue;
-                final.push(n);
-            }
+            // 二次連鎖填充：第 5 顆球必須與已選球有最強聯繫
+            let bestLink = sorted.find(n => {
+                if (final.includes(n)) return false;
+                let links = final.filter(f => (f % 10 === n % 10) || (Math.abs(f - n) === 1)).length;
+                return links >= 1;
+            });
+            
+            final.push(bestLink || sorted.find(n => !final.includes(n)));
 
             return final.sort((a, b) => a - b);
         }
@@ -115,7 +123,7 @@
             const tbody = document.getElementById('backtestBody');
             tbody.innerHTML = '';
             for (let i = data.length - 1; i > data.length - 11; i--) {
-                const pred = getDualTrackPick(data.slice(0, i));
+                const pred = getPenetrationPick(data.slice(0, i));
                 const hits = pred.filter(n => data[i].nums.includes(n));
                 const tr = document.createElement('tr');
                 if (hits.length >= 3) tr.className = 'best-hit';
@@ -123,7 +131,7 @@
                 tr.innerHTML = `<td>${data[i].date}</td><td>${data[i].nums}</td><td>${pred.map(n=>`<span class="num-badge ${data[i].nums.includes(n)?'hit-badge':''}">${n}</span>`).join('')}</td><td class="hit-count">${hits.length}</td>`;
                 tbody.appendChild(tr);
             }
-            const nextP = getDualTrackPick(data);
+            const nextP = getPenetrationPick(data);
             document.getElementById('predictionResults').innerHTML = nextP.map(n=>`<span class="num-badge" style="font-size:1.2rem">${n}</span>`).join('');
             document.getElementById('analysisSection').style.display = 'block';
         }
