--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>AI 雙軌分層濾鏡系統 - 優化 v64</title>
+    <title>AI 極化共振系統 - 優化 v65</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e74c3c; --success: #27ae60; --bg: #f4f7f6; }
         body { font-family: "Microsoft JhengHei", sans-serif; background: var(--bg); margin: 0; padding: 20px; }
@@ -15,14 +15,13 @@
         th, td { border: 1px solid #eee; text-align: center; padding: 8px 4px; font-size: 12px; }
         th { background: var(--primary); color: white; }
         .good-hit { background-color: #e8f5e9 !important; border: 2px solid var(--success) !important; }
-        .best-hit { background-color: #fff3cd !important; border: 2px solid #f1c40f !important; }
         .hit-count { font-weight: bold; color: var(--success); font-size: 1.3rem; }
     </style>
 </head>
 <body>
 
     <div class="panel">
-        <h3 class="panel-title">1. 數據解析 (v64 雙軌分層版)</h3>
+        <h3 class="panel-title">1. 數據解析 (v65 極化共振版)</h3>
         <input type="file" id="csvFile" accept=".csv">
     </div>
 
@@ -33,10 +32,10 @@
         </div>
 
         <div class="panel">
-            <h3 class="panel-title">3. 滾動回測紀錄 (目標：找回 60% 命中率)</h3>
+            <h3 class="panel-title">3. 滾動回測 (目標：80% 覆蓋率)</h3>
             <div class="table-container">
                 <table>
-                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v64)</th><th>命中</th></tr></thead>
+                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v65)</th><th>命中</th></tr></thead>
                     <tbody id="backtestBody"></tbody>
                 </table>
             </div>
@@ -62,14 +61,15 @@
             if (data.length > 0) processSystem(data);
         }
 
-        function getLayeredPick(history) {
+        function getPolarizedPick(history) {
             let scores = Array(40).fill(0);
             let missArr = Array(40).fill(0);
             const lastNums = history[history.length - 1].nums;
-            const recentHistory = history.slice(-10).flatMap(h => h.nums);
+            const recentHistory = history.slice(-5).flatMap(h => h.nums);
             
-            let tailFreq = Array(10).fill(0);
-            recentHistory.forEach(n => tailFreq[n % 10]++);
+            // 尾數熱度矩陣
+            let tailStats = Array(10).fill(0);
+            recentHistory.forEach(n => tailStats[n % 10]++);
 
             for (let i = 1; i <= 39; i++) {
                 let m = 0;
@@ -78,42 +78,39 @@
                 }
                 missArr[i] = m;
 
-                // 遺漏層級權重 (v48 強化)
-                if (m === 1) scores[i] += 550;       
-                else if (m >= 5 && m <= 9) scores[i] += 520; 
-                else if (m === 0) scores[i] += 280;  
-                else if (m >= 13) scores[i] = 0;     
-                else scores[i] += 80; // 壓低溫水區
+                // 強力極化權重 (優先斜連 L1 與 黃金反彈 L5-9)
+                if (m === 1) scores[i] += 700;       
+                else if (m >= 5 && m <= 9) scores[i] += 550; 
+                else if (m === 0) scores[i] += 300;
+                else scores[i] = m >= 13 ? 0 : 100;
 
-                // 鄰號傳導
-                if (lastNums.some(ln => Math.abs(ln - i) === 1)) scores[i] += 160;
-                // 尾數慣性
-                scores[i] += tailFreq[i % 10] * 25;
+                // 同尾共振權重
+                scores[i] += tailStats[i % 10] * 40;
+                // 鄰號修正
+                if (lastNums.some(ln => Math.abs(ln - i) === 1)) scores[i] += 180;
             }
 
             let sorted = Array.from({length: 39}, (_, i) => i + 1).sort((a, b) => scores[b] - scores[a]);
             let final = [];
 
-            // 1. 選取軌道 A (熱區斜連)
-            let trackA = sorted.filter(n => missArr[n] <= 1).slice(0, 2);
-            trackA.forEach(n => final.push(n));
+            // 1. 選取最高分核心 (種子球)
+            let seed = sorted[0];
+            final.push(seed);
 
-            // 2. 選取軌道 B (反彈金區)
-            let trackB = sorted.filter(n => !final.includes(n) && missArr[n] >= 5 && missArr[n] <= 9).slice(0, 2);
-            trackB.forEach(n => final.push(n));
+            // 2. 強制尋找「同尾共振號」(集彈策略：確保同尾雙開)
+            let sameTail = sorted.find(n => !final.includes(n) && (n % 10 === seed % 10));
+            if (sameTail) final.push(sameTail);
 
-            // 3. 選取軌道 C (共振與跨度校準)
-            let resonanceNode = sorted.find(n => {
-                if (final.includes(n)) return false;
-                // 檢查同尾或連號聯繫
-                let links = final.filter(f => (f % 10 === n % 10) || (Math.abs(f - n) === 1)).length;
-                // 檢查是否拉開區間跨度
-                let dist = Math.min(...final.map(f => Math.abs(f - n)));
-                return links >= 1 && dist >= 2;
-            });
+            // 3. 強制尋找「連號共振號」(集彈策略：確保連號雙開)
+            let neighbor = sorted.find(n => !final.includes(n) && Math.abs(n - seed) === 1);
+            if (neighbor) final.push(neighbor);
 
-            if (resonanceNode) final.push(resonanceNode);
-            else final.push(sorted.find(n => !final.includes(n)));
+            // 4. 補齊不同層級的高分球 (跨度保底)
+            for (let n of sorted) {
+                if (final.length >= 5) break;
+                if (final.includes(n)) continue;
+                final.push(n);
+            }
 
             return final.sort((a, b) => a - b);
         }
@@ -122,15 +119,14 @@
             const tbody = document.getElementById('backtestBody');
             tbody.innerHTML = '';
             for (let i = data.length - 1; i > data.length - 11; i--) {
-                const pred = getLayeredPick(data.slice(0, i));
+                const pred = getPolarizedPick(data.slice(0, i));
                 const hits = pred.filter(n => data[i].nums.includes(n));
                 const tr = document.createElement('tr');
-                if (hits.length >= 3) tr.className = 'best-hit';
-                else if (hits.length >= 2) tr.className = 'good-hit';
+                if (hits.length >= 2) tr.className = 'good-hit';
                 tr.innerHTML = `<td>${data[i].date}</td><td>${data[i].nums}</td><td>${pred.map(n=>`<span class="num-badge ${data[i].nums.includes(n)?'hit-badge':''}">${n}</span>`).join('')}</td><td class="hit-count">${hits.length}</td>`;
                 tbody.appendChild(tr);
             }
-            const nextP = getLayeredPick(data);
+            const nextP = getPolarizedPick(data);
             document.getElementById('predictionResults').innerHTML = nextP.map(n=>`<span class="num-badge" style="font-size:1.2rem">${n}</span>`).join('');
             document.getElementById('analysisSection').style.display = 'block';
         }
