--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>AI 三角共振集彈系統 - 優化 v72</title>
+    <title>AI 三維坍塌鎖定系統 - 優化 v73</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e74c3c; --success: #27ae60; --bg: #f4f7f6; }
         body { font-family: "Microsoft JhengHei", sans-serif; background: var(--bg); margin: 0; padding: 20px; }
@@ -14,7 +14,7 @@
         table { border-collapse: collapse; width: 100%; white-space: nowrap; background: white; }
         th, td { border: 1px solid #eee; text-align: center; padding: 10px 5px; font-size: 13px; }
         th { background: var(--primary); color: white; }
-        .best-hit { background-color: #fff9c4 !important; border: 2px solid #fbc02d !important; } /* 命中 3 顯色 */
+        .best-hit { background-color: #fff176 !important; border: 2px solid #fbc02d !important; font-weight: bold; }
         .good-hit { background-color: #e8f5e9 !important; border: 2px solid var(--success) !important; }
         .hit-count { font-weight: bold; color: var(--success); font-size: 1.3rem; }
     </style>
@@ -22,21 +22,21 @@
 <body>
 
     <div class="panel">
-        <h3 class="panel-title">1. 數據解析 (v72 三角集彈版)</h3>
+        <h3 class="panel-title">1. 數據解析 (v73 三維坍塌版)</h3>
         <input type="file" id="csvFile" accept=".csv">
     </div>
 
     <div id="analysisSection" style="display:none;">
         <div class="panel">
-            <h3 class="panel-title">2. AI 三角預測 (目標：40% 命中 3)</h3>
+            <h3 class="panel-title">2. AI 鎖定預測 (目標：40% 命中 3)</h3>
             <div id="predictionResults"></div>
         </div>
 
         <div class="panel">
-            <h3 class="panel-title">3. 滾動回測 (高集彈率驗證)</h3>
+            <h3 class="panel-title">3. 滾動回測 (集彈力檢驗)</h3>
             <div class="table-container">
                 <table>
-                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v72)</th><th>命中</th></tr></thead>
+                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v73)</th><th>命中</th></tr></thead>
                     <tbody id="backtestBody"></tbody>
                 </table>
             </div>
@@ -62,13 +62,13 @@
             if (data.length > 0) processSystem(data);
         }
 
-        function getTriangularPick(history) {
+        function getCollapsePick(history) {
             let scores = Array(40).fill(0);
             let missArr = Array(40).fill(0);
             const lastNums = history[history.length - 1].nums;
-            const shortTermNums = history.slice(-3).flatMap(h => h.nums); // 縮短尾數分析
+            const recentHistory = history.slice(-5).flatMap(h => h.nums);
             let tailFreq = Array(10).fill(0);
-            shortTermNums.forEach(n => tailFreq[n % 10]++);
+            recentHistory.forEach(n => tailFreq[n % 10]++);
 
             for (let i = 1; i <= 39; i++) {
                 let m = 0;
@@ -76,39 +76,39 @@
                     if (!history[j].nums.includes(i)) m++; else break;
                 }
                 missArr[i] = m;
-                // v72 極壓評分
-                if (m === 1) scores[i] += 1200;       
-                else if (m >= 5 && m <= 9) scores[i] += 850; 
-                else if (m === 0) scores[i] += 450;
+                // v73 極化權重：強制集彈
+                if (m === 1) scores[i] += 1500;       
+                else if (m >= 5 && m <= 9) scores[i] += 1000; 
+                else if (m === 0) scores[i] += 600;
                 else if (m >= 13) scores[i] = 0;
-                else scores[i] += 50; // 壓低非核心
+                else scores[i] += 50;
 
-                scores[i] += tailFreq[i % 10] * 70; // 尾數權重極大化
-                if (lastNums.some(ln => Math.abs(ln - i) === 1)) scores[i] += 350; // 鄰號權重極大化
+                scores[i] += tailFreq[i % 10] * 80;
+                if (lastNums.some(ln => Math.abs(ln - i) === 1)) scores[i] += 400;
             }
 
             let sorted = Array.from({length: 39}, (_, i) => i + 1).sort((a, b) => scores[b] - scores[a]);
             let final = [];
 
-            // 1. 建立三角核心 (命中 3 的關鍵)
+            // 1. 選取絕對核心
             let core = sorted[0];
             final.push(core);
 
-            // 尋找同尾中評分最高的一顆 (形成同尾對)
+            // 2. 坍塌鎖定：強迫同尾
             let tailMate = sorted.find(n => !final.includes(n) && (n % 10 === core % 10));
             if (tailMate) final.push(tailMate);
 
-            // 尋找鄰號中評分最高的一顆 (形成連號對)
+            // 3. 坍塌鎖定：強迫連號
             let neighborMate = sorted.find(n => !final.includes(n) && Math.abs(n - core) === 1);
             if (neighborMate) final.push(neighborMate);
 
-            // 2. 建立反彈核心 (命中 3 的備援)
-            let bounceCore = sorted.find(n => !final.includes(n) && missArr[n] >= 5 && missArr[n] <= 9);
-            if (bounceCore) {
-                final.push(bounceCore);
-                // 為反彈核心再配一顆同尾或鄰號，強化集彈效應
-                let bounceMate = sorted.find(n => !final.includes(n) && (n % 10 === bounceCore % 10 || Math.abs(n - bounceCore) === 1));
-                if (bounceMate) final.push(bounceMate);
+            // 4. 次核心區域坍塌 (確保 3+2 結構)
+            let secondCore = sorted.find(n => !final.includes(n) && Math.abs(Math.floor(n/10) - Math.floor(core/10)) >= 1);
+            if (secondCore) {
+                final.push(secondCore);
+                // 次核心的連鎖號
+                let secondMate = sorted.find(n => !final.includes(n) && (n % 10 === secondCore % 10 || Math.abs(n - secondCore) === 1));
+                if (secondMate) final.push(secondMate);
             }
 
             // 補齊位
@@ -124,7 +124,7 @@
             const tbody = document.getElementById('backtestBody');
             tbody.innerHTML = '';
             for (let i = data.length - 1; i > data.length - 11; i--) {
-                const pred = getTriangularPick(data.slice(0, i));
+                const pred = getCollapsePick(data.slice(0, i));
                 const hits = pred.filter(n => data[i].nums.includes(n));
                 const tr = document.createElement('tr');
                 if (hits.length >= 3) tr.className = 'best-hit';
@@ -132,7 +132,7 @@
                 tr.innerHTML = `<td>${data[i].date}</td><td>${data[i].nums}</td><td>${pred.map(n=>`<span class="num-badge ${data[i].nums.includes(n)?'hit-badge':''}">${n}</span>`).join('')}</td><td class="hit-count">${hits.length}</td>`;
                 tbody.appendChild(tr);
             }
-            const nextP = getTriangularPick(data);
+            const nextP = getCollapsePick(data);
             document.getElementById('predictionResults').innerHTML = nextP.map(n=>`<span class="num-badge" style="font-size:1.2rem">${n}</span>`).join('');
             document.getElementById('analysisSection').style.display = 'block';
         }
