--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>AI 雙軌共振系統 - 優化 v74</title>
+    <title>AI 三維同波集彈系統 - 優化 v75</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e74c3c; --success: #27ae60; --bg: #f4f7f6; }
         body { font-family: "Microsoft JhengHei", sans-serif; background: var(--bg); margin: 0; padding: 20px; }
@@ -22,21 +22,21 @@
 <body>
 
     <div class="panel">
-        <h3 class="panel-title">1. 數據解析 (v74 雙軌共振版)</h3>
+        <h3 class="panel-title">1. 數據解析 (v75 三維同波版)</h3>
         <input type="file" id="csvFile" accept=".csv">
     </div>
 
     <div id="analysisSection" style="display:none;">
         <div class="panel">
-            <h3 class="panel-title">2. AI 雙軌預測 (目標：40% 命中 3)</h3>
+            <h3 class="panel-title">2. AI 同波預測 (目標：40% 命中 3)</h3>
             <div id="predictionResults"></div>
         </div>
 
         <div class="panel">
-            <h3 class="panel-title">3. 滾動回測 (集彈力與覆蓋率平衡)</h3>
+            <h3 class="panel-title">3. 滾動回測 (極致集彈力檢驗)</h3>
             <div class="table-container">
                 <table>
-                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v74)</th><th>命中</th></tr></thead>
+                    <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合 (v75)</th><th>命中</th></tr></thead>
                     <tbody id="backtestBody"></tbody>
                 </table>
             </div>
@@ -62,13 +62,13 @@
             if (data.length > 0) processSystem(data);
         }
 
-        function getDualTrackPick(history) {
+        function getSyncWavePick(history) {
             let scores = Array(40).fill(0);
             let missArr = Array(40).fill(0);
             const lastNums = history[history.length - 1].nums;
-            const recentNums = history.slice(-7).flatMap(h => h.nums);
+            const recentHistory = history.slice(-6).flatMap(h => h.nums);
             let tailFreq = Array(10).fill(0);
-            recentNums.forEach(n => tailFreq[n % 10]++);
+            recentHistory.forEach(n => tailFreq[n % 10]++);
 
             for (let i = 1; i <= 39; i++) {
                 let m = 0;
@@ -76,37 +76,41 @@
                     if (!history[j].nums.includes(i)) m++; else break;
                 }
                 missArr[i] = m;
-                // v74 權重分配
-                if (m === 1) scores[i] += 800;
-                else if (m >= 5 && m <= 9) scores[i] += 1000; // 強化反彈
-                else if (m === 0) scores[i] += 400;
-                else if (m >= 13) scores[i] = 0;
-                else scores[i] += 120;
+                // v75 極壓分層加權
+                if (m === 1) scores[i] += 1600;      // 斜連核心
+                else if (m >= 5 && m <= 9) scores[i] += 1200; // 黃金反彈核心
+                else if (m === 0) scores[i] += 500;
+                else if (m >= 11) scores[i] = 0;     // 嚴格冷號封鎖
+                else scores[i] += 100;
 
-                scores[i] += tailFreq[i % 10] * 75;
-                if (lastNums.some(ln => Math.abs(ln - i) === 1)) scores[i] += 350;
+                scores[i] += tailFreq[i % 10] * 90; // 極致強化同尾共振
+                if (lastNums.some(ln => Math.abs(ln - i) === 1)) scores[i] += 450; // 強鄰號
             }
 
             let sorted = Array.from({length: 39}, (_, i) => i + 1).sort((a, b) => scores[b] - scores[a]);
             let final = [];
 
-            // 軌道 A：熱區連動組 (2 顆)
-            let coreA = sorted.find(n => missArr[n] <= 1);
-            final.push(coreA);
-            let mateA = sorted.find(n => !final.includes(n) && Math.abs(n - coreA) === 1);
-            if (mateA) final.push(mateA);
+            // 1. 定位「超級種子」(Super Seed)
+            let seed = sorted[0];
+            final.push(seed);
 
-            // 軌道 B：冷區共振組 (3 顆)
-            let coreB = sorted.find(n => !final.includes(n) && missArr[n] >= 5 && missArr[n] <= 9);
-            if (coreB) {
-                final.push(coreB);
-                // 尋找同尾
-                let tailB = sorted.find(n => !final.includes(n) && (n % 10 === coreB % 10));
-                if (tailB) final.push(tailB);
-                // 尋找鄰號或異區補位
-                let lastB = sorted.find(n => !final.includes(n) && (Math.abs(n - coreB) === 1 || Math.abs(n - coreA) > 10));
-                if (lastB) final.push(lastB);
-            }
+            // 2. 構建「同尾核心叢集」(目標命中 3 的基礎)
+            // 強制在種子尾數中選取第 2 顆最強號
+            let tailMate1 = sorted.find(n => !final.includes(n) && (n % 10 === seed % 10));
+            if (tailMate1) final.push(tailMate1);
+
+            // 強制在種子周圍選取最強鄰號
+            let neighborMate = sorted.find(n => !final.includes(n) && Math.abs(n - seed) === 1);
+            if (neighborMate) final.push(neighborMate);
+
+            // 3. 擴張「縱深攻擊位」
+            // 尋找該尾數中的第 3 顆號碼 (賭尾數三開) 或 異區最強反彈號
+            let depthMate = sorted.find(n => !final.includes(n) && (n % 10 === seed % 10));
+            if (depthMate && final.length < 4) final.push(depthMate);
+
+            // 4. 補強位 (確保分佈在不同十位數以增加覆蓋)
+            let bounceCore = sorted.find(n => !final.includes(n) && Math.abs(Math.floor(n/10) - Math.floor(seed/10)) >= 1);
+            if (bounceCore) final.push(bounceCore);
 
             while (final.length < 5) {
                 let next = sorted.find(n => !final.includes(n));
@@ -120,7 +124,7 @@
             const tbody = document.getElementById('backtestBody');
             tbody.innerHTML = '';
             for (let i = data.length - 1; i > data.length - 11; i--) {
-                const pred = getDualTrackPick(data.slice(0, i));
+                const pred = getSyncWavePick(data.slice(0, i));
                 const hits = pred.filter(n => data[i].nums.includes(n));
                 const tr = document.createElement('tr');
                 if (hits.length >= 3) tr.className = 'best-hit';
@@ -128,7 +132,7 @@
                 tr.innerHTML = `<td>${data[i].date}</td><td>${data[i].nums}</td><td>${pred.map(n=>`<span class="num-badge ${data[i].nums.includes(n)?'hit-badge':''}">${n}</span>`).join('')}</td><td class="hit-count">${hits.length}</td>`;
                 tbody.appendChild(tr);
             }
-            const nextP = getDualTrackPick(data);
+            const nextP = getSyncWavePick(data);
             document.getElementById('predictionResults').innerHTML = nextP.map(n=>`<span class="num-badge" style="font-size:1.2rem">${n}</span>`).join('');
             document.getElementById('analysisSection').style.display = 'block';
         }
