--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>AI 三維坍縮系統 - 優化 v92</title>
+    <title>AI 區塊坍縮系統 - 優化 v93</title>
     <style>
         :root { --p: #2c3e50; --s: #27ae60; --b: #f4f7f6; }
         body { font-family: sans-serif; background: var(--b); padding: 20px; }
@@ -19,17 +19,17 @@
 <body>
 
     <div class="panel">
-        <h3>1. 數據解析 (v92 三維坍縮版)</h3>
+        <h3>1. 數據解析 (v93 區塊坍縮版)</h3>
         <input type="file" id="csvFile" accept=".csv">
     </div>
 
     <div id="resSection" style="display:none;">
         <div class="panel">
-            <h3>2. AI 坍縮預測 (衝刺 40% 命中 3)</h3>
+            <h3>2. AI 飽和預測 (目標：40% 命中 3)</h3>
             <div id="predResult"></div>
         </div>
         <div class="panel">
-            <h3>3. 滾動回測 (高壓連鎖檢驗)</h3>
+            <h3>3. 滾動回測 (區塊集彈檢驗)</h3>
             <table>
                 <thead><tr><th>日期</th><th>真實獎號</th><th>預測組合</th><th>命中</th></tr></thead>
                 <tbody id="btBody"></tbody>
@@ -51,18 +51,18 @@
             tbody.innerHTML = '';
             
             for (let i = data.length - 1; i > data.length - 11; i--) {
-                const pred = getTriDimensionalLink(data.slice(0, i));
+                const pred = getBlockCollapsePick(data.slice(0, i));
                 const hits = pred.filter(n => data[i].nums.includes(n));
                 const tr = document.createElement('tr');
                 if (hits.length >= 3) tr.className = 'best-hit';
                 tr.innerHTML = `<td>${data[i].date}</td><td>${data[i].nums}</td><td>${pred.map(n=>`<span class="num-badge ${data[i].nums.includes(n)?'hit-badge':''}">${n}</span>`).join('')}</td><td class="hit-count">${hits.length}</td>`;
                 tbody.appendChild(tr);
             }
-            document.getElementById('predResult').innerHTML = getTriDimensionalLink(data).map(n=>`<span class="num-badge" style="font-size:1.4rem">${n}</span>`).join('');
+            document.getElementById('predResult').innerHTML = getBlockCollapsePick(data).map(n=>`<span class="num-badge" style="font-size:1.4rem">${n}</span>`).join('');
             document.getElementById('resSection').style.display = 'block';
         }
 
-        function getTriDimensionalLink(hist) {
+        function getBlockCollapsePick(hist) {
             let sc = Array(40).fill(0), ms = Array(40).fill(0);
             const last = hist[hist.length-1].nums, recent = hist.slice(-7).flatMap(h=>h.nums);
             let tf = Array(10).fill(0); recent.forEach(n=>tf[n%10]++);
@@ -70,34 +70,33 @@
             for (let i=1; i<=39; i++) {
                 let m = 0; for(let j=hist.length-1; j>=0; j--) { if(!hist[j].nums.includes(i)) m++; else break; }
                 ms[i] = m;
-                // v92 高壓權重
-                if(m===1) sc[i]+=1650; 
-                else if(m>=5 && m<=9) sc[i]+=1600; 
-                else if(m===0) sc[i]+=650; 
+                // v93 高壓飽和權重
+                if(m===1) sc[i]+=1700; 
+                else if(m>=5 && m<=9) sc[i]+=1700; 
+                else if(m===0) sc[i]+=600; 
                 else if(m>=13 || (m>=2 && m<=4)) sc[i]=0; 
                 else sc[i]+=100;
 
-                sc[i] += tf[i%10]*280; 
+                sc[i] += tf[i%10]*320; 
                 if(last.some(ln=>Math.abs(ln-i)===1)) sc[i]+=500;
             }
 
             let sorted = Array.from({length:39},(_,i)=>i+1).sort((a,b)=>sc[b]-sc[a]);
+            
+            // 找出權重最高的區塊 (0-9, 10-19, 20-29, 30-39)
+            let zones = [0, 10, 20, 30].map(start => ({
+                start, 
+                score: sorted.filter(n => n >= start && n < start + 10).slice(0, 4).reduce((sum, n) => sum + sc[n], 0)
+            })).sort((a,b) => b.score - a.score);
+
             let res = [];
+            // 1. 區塊核心 (最強區塊內的前 4 名)
+            let blockNums = sorted.filter(n => n >= zones[0].start && n < zones[0].start + 10).slice(0, 4);
+            blockNums.forEach(n => res.push(n));
 
-            // 1. 一級坍縮組 (核心 + 鄰號 + 同尾)
-            let coreA = sorted[0]; res.push(coreA);
-            let neighborA = sorted.find(n => !res.includes(n) && Math.abs(n-coreA) === 1);
-            if(neighborA) res.push(neighborA);
-            let tailA = sorted.find(n => !res.includes(n) && n%10 === coreA%10);
-            if(tailA) res.push(tailA);
-
-            // 2. 二級共振組 (跨區次強核心 + 同尾)
-            let coreB = sorted.find(n => !res.includes(n) && Math.abs(Math.floor(n/10)-Math.floor(coreA/10)) >= 1);
-            if(coreB) {
-                res.push(coreB);
-                let tailB = sorted.find(n => !res.includes(n) && n%10 === coreB%10);
-                if(tailB) res.push(tailB);
-            }
+            // 2. 全域哨兵 (剩餘號碼中最強的一顆，且不在同區塊)
+            let sentinel = sorted.find(n => !res.includes(n) && (n < zones[0].start || n >= zones[0].start + 10));
+            if(sentinel) res.push(sentinel);
 
             while (res.length < 5) res.push(sorted.find(n => !res.includes(n)));
             return res.sort((a, b) => a - b);
